[gd_scene load_steps=9 format=3 uid="uid://cy3ph8o25c237"]

[ext_resource type="Script" uid="uid://b2q10fjqsmsmh" path="res://character/classes/guard/guard.gd" id="1_l3oyb"]
[ext_resource type="Texture2D" uid="uid://ulu1vorupakr" path="res://character/green_circle.png" id="2_w1bfq"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="3_wac3u"]
[ext_resource type="SpriteFrames" uid="uid://ncc0pqrnhyfl" path="res://character/data/test_spriteframes.tres" id="3_wot6i"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="4_w1bfq"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="5_wot6i"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="7_wot6i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kb54t"]
size = Vector2(16, 16)

[node name="Guard" type="CharacterBody2D" node_paths=PackedStringArray("statechart", "sprite", "selected_notifier") groups=["Characters"]]
collision_layer = 3
input_pickable = true
motion_mode = 1
script = ExtResource("1_l3oyb")
statechart = NodePath("StateChart")
sprite = NodePath("AnimatedSprite2D")
selected_notifier = NodePath("SelectNotifier")

[node name="SelectNotifier" type="Sprite2D" parent="."]
texture = ExtResource("2_w1bfq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.125, 0.125)
sprite_frames = ExtResource("3_wot6i")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kb54t")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_wac3u")

[node name="Movement" type="Node" parent="StateChart"]
script = ExtResource("4_w1bfq")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Movement"]
script = ExtResource("5_wot6i")

[node name="ToMoving" type="Node" parent="StateChart/Movement/Idle"]
script = ExtResource("7_wot6i")
to = NodePath("../../MoveToPosition")
event = &"target_pos_set"
delay_in_seconds = "0.0"

[node name="MoveToPosition" type="Node" parent="StateChart/Movement"]
script = ExtResource("5_wot6i")

[node name="ToIdle" type="Node" parent="StateChart/Movement/MoveToPosition"]
script = ExtResource("7_wot6i")
to = NodePath("../../Idle")
event = &"target_pos_reached"
delay_in_seconds = "0.0"

[node name="GuardPosition" type="Node" parent="StateChart/Movement"]
script = ExtResource("5_wot6i")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="state_entered" from="StateChart/Movement/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Movement/MoveToPosition" to="." method="_on_move_to_position_state_physics_processing"]
